<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password !</string>
    <string name="create_a_new_account">Create A new Account</string>
    <string name="email_id">Email_id</string>
    <string name="address">Address</string>
    <string name="phone">phone</string>
    <string name="phone_number">Phone Number</string>
</resources>