<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#1A548E"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivGambar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/gambar1" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/met1"
        android:layout_below="@id/ivGambar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_username"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/met2"
        android:layout_below="@id/met1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_email"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/met3"
        android:layout_below="@id/met2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_password"
            android:drawableEnd="@drawable/ic_show_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/met5"
        android:layout_below="@id/met3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_lock_open"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/met6"
        android:layout_below="@id/met5">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_phone"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/met6"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="12dp"
        android:text="Boy"
        android:textSize="25dp"
        android:textStyle="bold" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/met6"
        android:layout_marginTop="12dp"
        android:id="@+id/met7"
        android:text="Girl"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="100dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Register"
        android:backgroundTint="#FF9800"
        android:layout_below="@id/met7"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="22dp"
        android:id="@+id/btnLogin"/>

</RelativeLayout>